fix: fix definition of the saturated chase-like tree
I was thinking that a propagation step in chase proofs only copies back a base fact, but I realized that we can propagate any fact as long as it is guarded by the instance at the parent vertex

--- a/preamble.sty
+++ b/preamble.sty
@@ -23,10 +23,13 @@
 
 \def\exlift{{\operatorname{Lift}_\exists}}
 \def\Sat{{\operatorname{Sat}}}
+\def\FullSat{{\operatorname{FullSat}}}
 
+\def\TreeFacts{{\operatorname{TreeFacts}}}
 \def\consts{{\operatorname{consts}}}
 \def\vars{{\operatorname{vars}}}
 \def\chase{{\operatorname{chase}}}
 \def\chaseHead{{\operatorname{chaseHead}}}
+\def\rew{{\operatorname{rew}}}
 
 \def\ChaseStepDir{{\operatorname{ChaseStepDir}}}
