feat: add \Instance macro

--- a/preamble.sty
+++ b/preamble.sty
@@ -31,6 +31,7 @@
 \def\chase{{\operatorname{chase}}}
 \def\chaseHead{{\operatorname{chaseHead}}}
 \def\rew{{\operatorname{rew}}}
+\def\Instance{{\operatorname{Instance}}}
 
 \def\ChaseStepDir{{\operatorname{ChaseStepDir}}}
 \def\SatTree{{\operatorname{SatTree}}}
