feat: write a bit about properties of SatTree

--- a/preamble.sty
+++ b/preamble.sty
@@ -33,5 +33,7 @@
 \def\rew{{\operatorname{rew}}}
 \def\Instance{{\operatorname{Instance}}}
 
+\def\Intro{{\operatorname{Intro}}}
+
 \def\ChaseStepDir{{\operatorname{ChaseStepDir}}}
 \def\SatTree{{\operatorname{SatTree}}}
