feat: define heads of sequences

--- a/preamble.sty
+++ b/preamble.sty
@@ -3,6 +3,7 @@
 
 \def\elems{{\operatorname{elems}}}
 \def\concat{{^\frown}}
+\def\head{{\operatorname{head}}}
 
 \def\Vars{{\mathrm{Vars}}}
 \def\Nulls{{\mathrm{Nulls}}}
