feat: prove the "witness decomposition lemma"

--- a/preamble.sty
+++ b/preamble.sty
@@ -38,3 +38,5 @@
 
 \def\ChaseStepDir{{\operatorname{ChaseStepDir}}}
 \def\SatTree{{\operatorname{SatTree}}}
+
+\def\touchDowners{{\operatorname{touchDowners}}}
