feat: write down a few definitions that lead to the witness gluing lemma

--- a/preamble.sty
+++ b/preamble.sty
@@ -4,6 +4,7 @@
 \def\elems{{\operatorname{elems}}}
 \def\concat{{^\frown}}
 \def\head{{\operatorname{head}}}
+\def\ConnComp{{\operatorname{ConnComp}}}
 
 \def\Vars{{\mathrm{Vars}}}
 \def\Nulls{{\mathrm{Nulls}}}
@@ -40,3 +41,4 @@
 \def\SatTree{{\operatorname{SatTree}}}
 
 \def\touchDowners{{\operatorname{touchDowners}}}
+\def\Glue{{\operatorname{Glue}}}
