feat: define `exports` operator macro

--- a/preamble.sty
+++ b/preamble.sty
@@ -37,6 +37,7 @@
 
 \def\Intro{{\operatorname{Intro}}}
 
+\def\exports{{\operatorname{exports}}}
 \def\ChaseStepDir{{\operatorname{ChaseStepDir}}}
 \def\SatTree{{\operatorname{SatTree}}}
 
