fix: fix the global null-picking function by fixing the global set of predicates
so that we can describe SatTee Translation and other stuff

--- a/preamble.sty
+++ b/preamble.sty
@@ -16,6 +16,7 @@
 \def\NullableTerms{{\mathrm{NullableTerms}}}
 \def\Atoms{{\mathrm{Atoms}}}
 \def\Formulae{{\mathrm{Formulae}}}
+\def\GTGDFormulae{{\mathrm{GTGDFormulae}}}
 
 \def\FactualSubstitutions{{\mathrm{FactualSubstitutions}}}
 
