feat: add some macros

--- a/preamble.sty
+++ b/preamble.sty
@@ -45,3 +45,7 @@
 \def\touchDowners{{\operatorname{touchDowners}}}
 \def\Glue{{\operatorname{Glue}}}
 \def\Frag{{\operatorname{Frag}}}
+
+\def\Tentacle{{\operatorname{Tentacle}}}
+
+\def\Abst{{\operatorname{Abst}}}
