feat: add definitions which I think works™

--- a/preamble.sty
+++ b/preamble.sty
@@ -49,3 +49,5 @@
 \def\Tentacle{{\operatorname{Tentacle}}}
 
 \def\Abst{{\operatorname{Abst}}}
+\def\GenConst{{\operatorname{GenConst}}}
+\def\GenInst{{\operatorname{GenInst}}}
