feat: define what it means to answer a CQ

--- a/preamble.sty
+++ b/preamble.sty
@@ -19,6 +19,7 @@
 \def\GTGDFormulae{{\mathrm{GTGDFormulae}}}
 
 \def\FactualSubstitutions{{\mathrm{FactualSubstitutions}}}
+\def\QueryAnswers{{\operatorname{QueryAnswers}}}
 
 \def\Facts{{\mathrm{Facts}}}
 \def\BaseFacts{{\mathrm{BaseFacts}}}
